fixing login page position when clicking on it while you are in product Page
fixing postion adding a transparent and blurry background

--- a/my-app/src/pages/LoginPage/LoginPage.css
+++ b/my-app/src/pages/LoginPage/LoginPage.css
@@ -6,6 +6,8 @@
     justify-content: flex-end; /* Align children (the .right-cont) to the right */
     margin-top: 2vh;
     align-items: center;
+    background-color: transparent;
+    backdrop-filter: blur(1px);
   }
   
   .login-page-cont .right-cont {
